--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -2,7 +2,8 @@
 
 .course_activity_content
   padding: 0px
-  overflow: hidden
+  .course-activity-header
+    margin: 0px
 
 .course-nav-top
   font-family: 'Raleway', sans-serif
