--- a/app/views/activities/_main_course_activity_content.html.haml
+++ b/app/views/activities/_main_course_activity_content.html.haml
@@ -48,6 +48,7 @@
         %ul
           - activity.used_in_activities.published.each do |activity|
             %li= link_to activity.title.html_safe, activity
+.row-fluid
   .span12.section
     .ordered-steps{:itemprop => "recipeInstructions"}
       - step_number = 0
