--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -25,21 +25,25 @@
       %ul.nav.nav-tabs.nav-stacked
         - @course.child_inclusions(@current_module).each do |inclusion_1|
           %li{class: inclusion_1 == @current_inclusion ? 'active' : ''}
-            - if inclusion_1.activity.published?
+            - if inclusion_1.activity.published? || inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
+              - show_inclusion_2 = true
               = link_to inclusion_1.activity.title.html_safe, [@course, inclusion_1.activity]
-            - else
-              = link_to inclusion_1.activity.title.html_safe, '#'
-          - if inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
-            - @course.child_inclusions(inclusion_1).each do |inclusion_2|
-              %li{class: inclusion_2 == @current_inclusion ? 'active' : ''}
-                - if inclusion_2.activity.published?
-                  = link_to [@course, inclusion_2.activity] do
-                    .indent-1
-                      = inclusion_2.activity.title.html_safe
-                - else
-                  = link_to '#' do
-                    .indent-1
-                      = inclusion_2.activity.title.html_safe
+            - elsif @course.child_inclusions(inclusion_1).any?
+              - show_inclusion_2 = false
+              = link_to inclusion_1.activity.title.html_safe, '#', class: 'nav-expand-link'
+          / - if inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
+          - @course.child_inclusions(inclusion_1).each do |inclusion_2|
+            - active_class = inclusion_2 == @current_inclusion ? 'active' : ''
+            - show_class = show_inclusion_2 ? '' : 'hide'
+            %li{class: "#{active_class} #{show_class}"}
+              - if inclusion_2.activity.published?
+                = link_to [@course, inclusion_2.activity] do
+                  .indent-1
+                    = inclusion_2.activity.title.html_safe
+              - else
+                = link_to '#' do
+                  .indent-1
+                    = inclusion_2.activity.title.html_safe
     .span9
       .container-fluid.course_activity_content
         = render 'main_course_activity_content', course: @course, activity: @activity
