--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -24,18 +24,22 @@
       .course-nav-side-marker
       %ul.nav.nav-tabs.nav-stacked
         - @course.child_inclusions(@current_module).each do |inclusion_1|
-          %li{class: inclusion_1 == @current_inclusion ? 'active' : ''}
-            - if inclusion_1.activity.published? || inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
+          - if inclusion_1 == @current_inclusion || inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
+            - active_inclusion_1 = true
+          - if inclusion_1.activity.published? && inclusion_1 == @current_inclusion
+            - active_inclusion_1_class = 'active'
+          %li{class: active_inclusion_1_class, data: {:'inclusion-id' => inclusion_1.id}}
+            - if active_inclusion_1
               - show_inclusion_2 = true
               = link_to inclusion_1.activity.title.html_safe, [@course, inclusion_1.activity]
             - elsif @course.child_inclusions(inclusion_1).any?
-              - show_inclusion_2 = false
+              - show_inclusion_2 = active_inclusion_1 ? true : false
               = link_to inclusion_1.activity.title.html_safe, '#', class: 'nav-expand-link'
           / - if inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
           - @course.child_inclusions(inclusion_1).each do |inclusion_2|
             - active_class = inclusion_2 == @current_inclusion ? 'active' : ''
             - show_class = show_inclusion_2 ? '' : 'hide'
-            %li{class: "#{active_class} #{show_class}"}
+            %li{class: "#{active_class} #{show_class}", data: {parent: "inclusion-id-#{inclusion_1.id}"}}
               - if inclusion_2.activity.published?
                 = link_to [@course, inclusion_2.activity] do
                   .indent-1
