--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -24,19 +24,21 @@
       .course-nav-side-marker
       %ul.nav.nav-tabs.nav-stacked
         - @course.child_inclusions(@current_module).each do |inclusion_1|
-          - if inclusion_1 == @current_inclusion || inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
-            - active_inclusion_1 = true
-          - if inclusion_1.activity.published? && inclusion_1 == @current_inclusion
-            - active_inclusion_1_class = 'active'
-          %li{class: active_inclusion_1_class, data: {:'inclusion-id' => inclusion_1.id}}
-            - if active_inclusion_1
-              - show_inclusion_2 = true
+          - inclusion_1_active = inclusion_1 == @current_inclusion ? true : false
+          - inclusion_1_published = inclusion_1.activity.published
+          - if inclusion_1_active
+            %li{class: 'active', data: {:'inclusion-id' => inclusion_1.id}}
               = link_to inclusion_1.activity.title.html_safe, [@course, inclusion_1.activity]
-            - elsif @course.child_inclusions(inclusion_1).any?
-              - show_inclusion_2 = active_inclusion_1 ? true : false
+          - elsif !inclusion_1_active && inclusion_1_published
+            %li{data: {:'inclusion-id' => inclusion_1.id}}
+              = link_to inclusion_1.activity.title.html_safe, [@course, inclusion_1.activity]
+          - elsif !inclusion_1_published && @course.child_inclusions(inclusion_1).any?
+            %li{data: {:'inclusion-id' => inclusion_1.id}}
               = link_to inclusion_1.activity.title.html_safe, '#', class: 'nav-expand-link'
-          / - if inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
           - @course.child_inclusions(inclusion_1).each do |inclusion_2|
+            - sibling_active = inclusion_1 == @course.parent_inclusion(@current_inclusion)
+            - if inclusion_1_active || sibling_active
+              - show_inclusion_2 = true
             - active_class = inclusion_2 == @current_inclusion ? 'active' : ''
             - show_class = show_inclusion_2 ? '' : 'hide'
             %li{class: "#{active_class} #{show_class}", data: {parent: "inclusion-id-#{inclusion_1.id}"}}
