course previous module button working

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -20,6 +20,8 @@
     font-size: 16px
     border: 2px solid $light-gray
     color: $light-gray
+    a
+      color: $light-gray
     &:hover
       background: gray
       color: white
