--- a/app/views/activities/_quiz_content.html.haml
+++ b/app/views/activities/_quiz_content.html.haml
@@ -9,7 +9,7 @@
           .row
             - quizzes.each do |quiz|
               .span4
-                = link_to quiz do
+                = link_to quiz_path(quiz, return_to: course_activity_path(@course, @activity)) do
                   .image-with-caption
                     - if quiz.has_image?
                       = image_tag quiz.image.url, class: 'img-polaroid'
