--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -48,4 +48,6 @@
         .pull-right
           #start-quiz.btn.btn-primary.btn-large
             = quiz.started_by?(current_user) ? "Return to Quiz" : "Start Quiz"
+        -if params[:return_to]
+          = link_to 'Return to Course', params[:return_to], class: 'btn btn-primary'
 
