--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,10 +21,7 @@
     - unless yield(:canonical_link).blank?
       %link{rel: "canonical", href: yield(:canonical_link) }
     = render 'layouts/google_analytics' if Rails.env.production?
-    = javascript_include_tag 'angular'
-    = javascript_include_tag 'angular-resource'
-    = javascript_include_tag 'angular-ui'
-    = javascript_include_tag 'chefstepsAngularInit'
+    = javascript_include_tag 'application_head'
 
   %body(ng-app="ChefStepsApp" ng-controller="ActivityController" ng-click="bodyClick()" ui-keypress="{90:'alert(0)'}")
     = render 'layouts/navigation', external: false
