add courses index page

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -31,7 +31,8 @@
                 %i.icon-angle-down
               %ul.dropdown-menu
                 .dropdown-background
-                %li= link_to 'Sous Vide Course', course_url('accelerated-sous-vide-cooking-course')
+                / %li= link_to 'Sous Vide Course', course_url('accelerated-sous-vide-cooking-course')
+                %li= link_to 'Courses', courses_path
                 %li= link_to 'Culinary Knowledge', sciences_url
             %li
               .nav-item-border
