--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -7,9 +7,9 @@
         %csEditPairShow
           .activity-description-wrapper
             .activity-description#activity-description
-              %div(ng-bind-html-unsafe="activity.description | markdown")
-              .activity-description-overlay
-            .text-center(ng-hide="editMode")
+              %div(ng-bind-html-unsafe="activity.description | markdown | shortcode")
+              .activity-description-overlay(ng-hide="activity.description.length < 455")
+            .text-center(ng-hide="false || editMode || (activity.description.length < 455)")
               = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
         %csEditPairEdit
           = text_area_tag :title, "", {rows: "15", data: {:'ng-model' => "activity.description"}}
