--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -385,6 +385,14 @@ li
       border: none
       box-shadow: none
 
+#activity_assignment_recipes_input
+  #s2id_activity_assignment_recipes
+    width: 76%
+  .select2-search-field
+    input
+      border: none
+      box-shadow: none
+
 .admin-activity-versions
   #urls
     display: none
