course final assignment update

--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -57,7 +57,7 @@
         - if @activity.has_quizzes?
           = render 'quiz_content'
         - elsif @activity.assignments.any?
-          = render 'assignment'
+          = render 'assignments'
         - else
           = render 'main_course_activity_content', course: @course, activity: @activity
 
