--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = stylesheet_link_tag 'print',  media: 'print'
     = csrf_meta_tags
     = render 'layouts/twitter'
+    = render 'layouts/filepicker'
     %meta{charset: 'utf-8'}
     %meta{name: 'description', content: yield(:description)}
     %meta{name: 'keywords', content: yield(:keywords)}
