--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -5,11 +5,12 @@
 .row-fluid
   - @activity.assignments.each do |assignment|
     .span3
-      = render 'shared/media_box_2', size: 'medium', url: '#', title: assignment.child_activity.title, image: assignment.child_activity.featured_image
+      .assignment
+        = render 'shared/media_box_2', size: 'medium', url: '#', title: assignment.child_activity.title, image: assignment.child_activity.featured_image, object: assignment.child_activity
       .text-center
         = link_to 'See the recipe', assignment.child_activity
   .span3
-    = render 'shared/media_box_2', size: 'medium', url: '#', title: 'Your own recipe', image: nil
+    = render 'shared/media_box_2', size: 'medium', url: '#', title: 'Your own recipe', image: nil, object: nil
 
 .row-fluid
   %hr
