--- a/app/views/shared/_media_box_2.html.haml
+++ b/app/views/shared/_media_box_2.html.haml
@@ -1,4 +1,6 @@
-.media-box-2
+- object_data = object ? "#{object.class}-#{object.id}" : nil
+
+.media-box-2{data: {object: object_data}}
   = link_to url do
     = truncate(title, length: 38)
     - if image
