--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -16,7 +16,7 @@
   %hr
 
 = form_for @upload do |f|
-  = f.text_field :activity_id
+  = f.hidden_field :activity_id
   .row-fluid
     .span4
       %h4 Upload a Photo
