fix failing test

--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -31,18 +31,5 @@
       %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
       = f.submit 'Finish The Course!', class: 'btn btn-primary btn-large'
 
-  / .row-fluid
-  /   .filepicker-group
-  /     -if defined? label_text
-  /       = label_tag '', label_text, class: "label"
-  /     = f.hidden_field :image_id, class: "filepicker-real-file"
-  /     .filepicker-preview-group
-  /       = image_tag '/assets/missing.png', class: "filepicker-preview"
-  /       .btn-small.remove-filepicker-image
-  /         %i.icon-remove
-  /     .filepicker-subgroup
-  /       .filepicker-pick-button.btn-small.btn-warning
-  /         Pick file
-  /       .filepicker-drop-pane.btn-small.btn-warning
-  /         Or drop file here
+= render 'layouts/filepicker'
 
