--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -1,69 +1,80 @@
-- content_for :title, "#{@user.name}'s Profile"
+- content_for :title, "Profile - #{@user.name}"
+.hide
+  / Automatically logs in user into forum
+  %iframe{src:'http://forum.chefsteps.com/entry/jsconnect?client_id=1924714588&Target=%2F'}
 
-.container#main-container
-  .row.section
-    .span4.well
-      %h1= "#{@user.name}'s Profile"
-      .section
-        - if is_current_user?(@user)
-          = link_to edit_registration_path(@user), class: 'btn btn-primary' do
-            %i.icon-cogs
-            Settings
-          = link_to sign_out_path, class: 'btn btn-primary' do
-            %i.icon-signout
-            Sign out
-    .span8
-      / %h3 Activities
-      / - @user.user_activities.each do |user_activity|
-      /   %div
-      /     = @user.name + ' cooked ' + user_activity.activity.title + ' ' + time_ago_in_words(user_activity.created_at) + ' ago'
-      %h3 Cook a Recipe
-      = render 'shared/horizontal_scroller', items: @recipes
+.container-fluid.top-container.profile-cover{style: "background-image: url('#{s3_image_url(Setting.footer_image)}')"}
+  .row-fluid
+    .container
+      .row
+        .span2
+          .profile-image
+            = image_tag 'http://placehold.it/200x200', class: 'img-circle'
+        .span10
+          %h1 hello
 
-      %h3 Learn a Technique
-      = render 'shared/horizontal_scroller', items: @techniques
 
-      %h3 Join a Discussion
-      - @discussions.each do |discussion|
-        / = discussion.inspect
-        - discussion_link = discussion[:url].gsub('https://chefsteps.vanillaforums.com','http://forum.chefsteps.com')
-        %h4
-          = discussion[:name]
-          %i.icon-comments
-          %small= discussion[:count_comments]
-        = link_to discussion_link do
-          %blockquote.word-wrap
-            %p= truncate(strip_tags(discussion[:body]), length: 300, separator: ' ')
-            %small
-              %cite
-                = discussion[:first_name]
+/ .container#main-container
+/   .row.section
+/     .span4.well
+/       %h1= "#{@user.name}'s Profile"
+/       .section
+/         - if is_current_user?(@user)
+/           = link_to edit_registration_path(@user), class: 'btn btn-primary' do
+/             %i.icon-cogs
+/             Settings
+/           = link_to sign_out_path, class: 'btn btn-primary' do
+/             %i.icon-signout
+/             Sign out
+/     .span8
+/       / %h3 Activities
+/       / - @user.user_activities.each do |user_activity|
+/       /   %div
+/       /     = @user.name + ' cooked ' + user_activity.activity.title + ' ' + time_ago_in_words(user_activity.created_at) + ' ago'
+/       %h3 Cook a Recipe
+/       = render 'shared/horizontal_scroller', items: @recipes
 
-  - content_for :bottom do
-    .row.section
-      .span12
-        %h2 Quizzes
-        - if completed_quizzes.any?
-          = render partial: 'profile_quiz_info', user: @user
-        - else
-          You haven't completed any quizzes
+/       %h3 Learn a Technique
+/       = render 'shared/horizontal_scroller', items: @techniques
 
-  .hide
-    %iframe{src:'http://forum.chefsteps.com/entry/jsconnect?client_id=1924714588&Target=%2F'}
+/       %h3 Join a Discussion
+/       - @discussions.each do |discussion|
+/         / = discussion.inspect
+/         - discussion_link = discussion[:url].gsub('https://chefsteps.vanillaforums.com','http://forum.chefsteps.com')
+/         %h4
+/           = discussion[:name]
+/           %i.icon-comments
+/           %small= discussion[:count_comments]
+/         = link_to discussion_link do
+/           %blockquote.word-wrap
+/             %p= truncate(strip_tags(discussion[:body]), length: 300, separator: ' ')
+/             %small
+/               %cite
+/                 = discussion[:first_name]
 
-  / .hero-unit
-  /   .container
-  /     .row
-  /       .span12
-  /         - profile_title = is_current_user?(user) ? "My Profile" : "#{user.name}'s Profile"
-  /         %h3=profile_title
+/   - content_for :bottom do
+/     .row.section
+/       .span12
+/         %h2 Quizzes
+/         - if completed_quizzes.any?
+/           = render partial: 'profile_quiz_info', user: @user
+/         - else
+/           You haven't completed any quizzes
 
-  / .container.user-profile
-  /   .row
-  /     .span4.pull-right.horizontal-divider
-  /       = render partial: 'profile_bio', user: user
-  /     - if is_current_user?(user)
-  /       .span8.pull-left.user-profile-intro
-  /         = render partial: 'profile_intro', user: user
-  /     .span8.pull-left.user-profile-info
-  /       = render partial: 'profile_quiz_info', user: user
+/ .hero-unit
+/   .container
+/     .row
+/       .span12
+/         - profile_title = is_current_user?(user) ? "My Profile" : "#{user.name}'s Profile"
+/         %h3=profile_title
+
+/ .container.user-profile
+/   .row
+/     .span4.pull-right.horizontal-divider
+/       = render partial: 'profile_bio', user: user
+/     - if is_current_user?(user)
+/       .span8.pull-left.user-profile-intro
+/         = render partial: 'profile_intro', user: user
+/     .span8.pull-left.user-profile-info
+/       = render partial: 'profile_quiz_info', user: user
 
