[user profiles] text shadow

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -5,11 +5,16 @@
   background-size: 100%
   background-position: center
   border-bottom: 2px solid $orange
-
-.profile-image
-  margin-top: 115px
-  img
-    border: 2px solid $orange
+  .profile-image
+    margin-top: 115px
+    img
+      border: 2px solid $orange
+  h1
+    font-weight: 700
+    font-size: 50px
+    color: white
+    margin-top: 140px
+    text-shadow: -1px 1px black
 
 @media (min-width: 768px) and (max-width: 979px)
   .profile-cover
