--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -11,7 +11,7 @@
           .profile-image
             = image_tag 'http://placehold.it/200x200', class: 'img-circle'
         .span10
-          %h1 hello
+          %h1= @user.name
 
 
 / .container#main-container
