[user profiles] recipes and courses

--- a/app/views/shared/_media_box.html.haml
+++ b/app/views/shared/_media_box.html.haml
@@ -2,4 +2,5 @@
   = link_to url do
     - if image
       = image_tag filepicker_gallery_image(image)
+    - if title
       = truncate(title, length: 35)
