--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -9,12 +9,16 @@
     margin-top: 115px
     img
       border: 2px solid $orange
+      @include boxsizing
   h1
     font-weight: 700
     font-size: 50px
     color: white
     margin-top: 140px
     text-shadow: -1px 1px black
+    
+.profile-badges
+  margin-top: 100px
 
 @media (min-width: 768px) and (max-width: 979px)
   .profile-cover
