--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -16,18 +16,36 @@
     color: white
     margin-top: 140px
     text-shadow: -1px 1px black
-    
+
 .profile-badges
   margin-top: 100px
+
+@media (max-width: 1200px)
+  .profile-cover
+    .profile-image
+      margin-top: 130px
 
 @media (min-width: 768px) and (max-width: 979px)
   .profile-cover
     margin-top: -20px
+    .profile-image
+      margin-top: 145px
 
 @media (max-width: 767px)
   .profile-cover
     margin: -20px -20px 0px
+    .profile-image
+      margin-top: 140px
+      margin-left: 10px
+      img
+        width: 120px
+    h1
+      margin-top: -120px
+      text-align: center
 
 @media (max-width: 480px)
   .profile-cover
     margin: -20px -20px 0px
+    h1
+      font-size: 30px
+      margin-top: -180px
