fixed merge conflicts

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -23,10 +23,12 @@
             .span4.offset1
               %h3 Contact
               %p
-                General inquiries:
+                = link_to 'Blog', 'http://blog.chefsteps.com'
+              %p
+                General:
                 = mail_to 'info@chefsteps.com'
               %p
-                Press inquiries:
+                Press:
                 = mail_to 'press@chefsteps.com'
 
             .span2
