--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -123,13 +123,16 @@
           .row
             .span12
               .row
-                .span6.text-right
-                  %h3 Join the community
-                  Let's help each other become better cooks.
-                .span6
+                .span5.offset1
+                  %h3 Join the Community
                   = form_tag sign_up_url, :method => :get do
                     = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
                     = hidden_field_tag :signed_up_from, 'bottom_popup_cta'
-                    = submit_tag 'Sign Up Now', class: 'btn btn-primary', id: 'subscribe-email'
+                    = submit_tag 'Sign Up Now', class: 'btn btn-secondary', id: 'subscribe-email'
+                .span6
+                  %h3 Benefits Include
+                  %ul
+                    %li Ask questions of some of the world's best chefs
+                    %li Keep up to date with our latest recipes
                 .popup-bottom-close
                   %i.icon-remove
