--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -29,8 +29,8 @@
         .tab-pane.active#courses
           - @user.courses.each do |course|
             = render 'shared/media_box', size: 'medium', url: course_path(course), title: course.title, image: course.first_published_activity.featured_image
-            = @user.events.scoped_by('Inclusion', 'show').where(inclusions: {course_id: 8}).map(&:trackable).uniq.count
-            = course.inclusions.where('nesting_level <> ?', 0).count
+            = @user.viewed_activites_in_course(course).count
+            = course.viewable_activities.count
         .tab-pane#recipes
           - @user.uploads.each do |upload|
             .row.section
