--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -32,7 +32,7 @@
         %csEditPairShow
           %h1.activity-title(ng-bind-html-unsafe="activity.title"){itemprop: 'name'}
         %csEditPairEdit
-          = text_area_tag :title, "", {class: "nohtml", rows: "2", data: {:'ng-model' => "activity.title"}}
+          = text_area_tag :title, "", {class: "nohtml", rows: "2", data: {:'ng-model' => "activity.title"}, autofocus: 'autofocus'}
 
     .span6.noprint
 
