--- a/app/views/admin/courses/_form.html.haml
+++ b/app/views/admin/courses/_form.html.haml
@@ -1,3 +1,4 @@
+= render 'layouts/filepicker'
 :ruby
 
 = semantic_form_for [:admin, @course] do |f|
@@ -6,6 +7,19 @@
     = f.input :title
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :short_description, label: "Short description, for SERPs"
+    %li
+      .filepicker-group
+        = f.label :image_id, 'Image', class: 'label'
+        = f.hidden_field :image_id, class: 'filepicker-real-file'
+        .filepicker-preview-group
+          = image_tag '/assets/missing.png', class: "filepicker-preview"
+          .btn-small.remove-filepicker-image
+            %i.icon-remove
+        .filepicker-subgroup
+          .filepicker-pick-button.btn-small.btn-warning
+            Pick file
+          .filepicker-drop-pane.btn-small.btn-warning
+            Or drop file here
 
   = section("Activities", f) do
     = hidden_field_tag "activity_hierarchy"
