--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,7 +14,8 @@
     - if @courses.any?
       - @courses.each do |course|
         .span4
-          = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course.first_published_activity.featured_image, object: course
+          - course_image = course.image_id? ? course.image_id : course.first_published_activity.featured_image
+          = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course_image, object: course
       .span4
         %p.lead 
           %br
