filepickah coming along

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -290,13 +290,8 @@ h1, h2, h3, h4
 
 .video-container
   position: relative
-  padding-bottom: 56.25%
-  height: 0
-  iframe, object, embed
-    position: absolute
-    top: 0
-    left: 0
-    height: 100%
+  width: 100%
+  iframe, object, embed, .edit-pair, .edit-pair-show, .edit-pair-edit
     width: 100%
     border: none
   #image-viewer
@@ -1108,6 +1103,10 @@ h1, h2, h3, h4
   .activity-description
     height: 100px
 
+  .video-container
+    iframe, object, embed
+      min-height: 320px
+
 @media (max-width: 1200px)
   .media-centered-medium
     height: 168px
@@ -1125,6 +1124,10 @@ h1, h2, h3, h4
 
   .activity-description
     height: 140px
+
+  .video-container
+    iframe, object, embed
+      min-height: 258px
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
@@ -1150,6 +1153,10 @@ h1, h2, h3, h4
 
   .activity-description
     height: 160px
+
+  .video-container
+    iframe, object, embed
+      min-height: 198px
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
@@ -1209,7 +1216,11 @@ h1, h2, h3, h4
 
   .nav-item-border
     display: none
- 
+
+  .video-container
+    iframe, object, embed
+      width: 100%
+
 /* Landscape phones and down */
 @media (max-width: 480px)
   #hero-container
@@ -1237,3 +1248,8 @@ h1, h2, h3, h4
         width: 15%
       .step-content
         width: 85%
+
+  .video-container
+    iframe, object, embed
+      min-height: 202px
+
