[spherification] landing page updates

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -40,7 +40,7 @@
         Buy a kit to help you get started or <a href="#">browse the course now</a>.
 
 %hr
-- ['good','better','best'].each do |kit_title|
+- ['creative','enthusiast','professional'].each do |kit_title|
   .container-fluid.well-gradient
     .row-fluid
       .container
