[flash] update flash notice

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, course.title
 - content_for :description, course.short_description
-.container#main-container
+.container
   %h2= course.title
   .row.top-video
     .span12
