--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -1,7 +1,7 @@
 - content_for :title, course.title
 - content_for :description, course.short_description
 
-.container.top-container
+.container
   .row.section
     .span6
       %h1= course.title
