--- a/app/views/sciences/index.html.haml
+++ b/app/views/sciences/index.html.haml
@@ -1,10 +1,11 @@
-.row
-  .span12
-    %h2 Culinary Knowledge and Stuff We Like
-    = paginate @sciences
-    .row.gallery
-      - @sciences.each do |science|
-        .span4
-          = link_to science do
-            = render 'shared/media_centered', media: science, size: 'medium'
-    = paginate @sciences
+.container
+  .row
+    .span12
+      %h2 Culinary Knowledge and Stuff We Like
+      = paginate @sciences
+      .row.gallery
+        - @sciences.each do |science|
+          .span4
+            = link_to science do
+              = render 'shared/media_centered', media: science, size: 'medium'
+      = paginate @sciences
