--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -3,7 +3,7 @@
   / Automatically logs in user into forum
   %iframe{src:'http://forum.chefsteps.com/entry/jsconnect?client_id=1924714588&Target=%2F'}
 
-.container-fluid.top-container.profile-cover{style: "background-image: url('#{s3_image_url(Setting.footer_image)}')"}
+.container-fluid.profile-cover{style: "background-image: url('#{s3_image_url(Setting.footer_image)}')"}
   .row-fluid
     .container
       .row
