[user profiles] updates to edit and sign out

--- a/app/views/user_profiles/edit.html.haml
+++ b/app/views/user_profiles/edit.html.haml
@@ -14,3 +14,4 @@
           = f.text_field :website
         %div
           = f.submit 'Save Changes', class: 'btn btn-primary'
+          = link_to 'Cancel', user_profile_path(@user), class: 'btn btn-primary'
